[package]
name = "zkzkvm-prover"
version = "0.0.1"
edition = "2021"

description = "A Javascript/NodeJS prover for eigen-zkit"
repository = "https://github.com/0xEigenLabs/zkzkvm-prover"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.51", features = ["serde-serialize"]  }
wasm-bindgen-futures = "0.4.1"
rand = { version="0.6.5", features = ["wasm-bindgen"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies]

bellman_ce = { git = "https://github.com/matter-labs/bellman", default_features = false, branch = "beta", features = ["wasm", "plonk"] }
#bellman_ce = { path = "../bellman", default_features = false, features = ["wasm", "plonk"] }
#franklin-crypto = { path = "../franklin-crypto", features = [ "plonk" ], version = "0.0.5"}
franklin-crypto = { git = "https://github.com/matter-labs/franklin-crypto", branch = "beta", features = [ "plonk" ], version = "0.0.5"}

hex-literal = "0.2.1"
num-bigint = "0.3.3"
num-traits = "0.2.8"
serde = { version = "1.0.101", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

bellman_vk_codegen = { git = "https://github.com/0xEigenLabs/solidity_plonk_verifier", version = "0.2.0", features = ["wasm"]}
#bellman_vk_codegen = { path = "../solidity_plonk_verifier/bellman_vk_codegen", version = "0.2.0", features = ["wasm"]}

#zklib = { path = "../EigenZKit/zklib", default_features = false, features = ["wasm"] }
zklib = { git = "https://github.com/0xEigenLabs/eigen-zkit", default_features = false, features = ["wasm"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
